# uta-align

./: .gitignore  .hgignore  .hgtags  .travis.yml  CONTRIBUTORS  Makefile  README.rst  TODO  cy_distribute.py  ez_setup.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
doc/source/: align.rst  cigar_utils.rst  conf.py
docs/: Makefile
docs/source/: algorithms.rst  conf.py  index.rst
sbin/: sdist-test
src/: __init__.py
tests/: test_align_algorithms.py  test_align_gap_open.py  test_cigar_utils.py  test_nw.fa  test_nw.py
uta_align/: __init__.py  algorithms.pyx
uta_align/align/: __init__.py  algorithms.c  algorithms.pyx  cigar_utils.c  cigar_utils.pxd  cigar_utils.pyx
