[metadata]
author=Kevin Jacobs, Reece Hart
author_email=reecehart+biocommons@gmail.com
description=C-based sequence alignment for Python
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license=Apache License 2.0
maintainer=Reece Hart
maintainer_email=reecehart+biocommons@gmail.com
name=uta-align
url=https://github.com/biocommons/uta-align/
zip_safe=False


[options]
install_requires =
    pysam>=0.15.0

setup_requires =
    setuptools_scm


[options.extras_require]
dev =
    cython
    ipython
    jupyter>=1.0
    pytest
    tox
    sphinx
    twine
    wheel


[aliases]
test = test-is-deprecated-do-not-use


[bdist_wheel]
universal = 1


[build_sphinx]
all_files=1
source-dir=docs/source
build-dir=docs/build


# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
max-line-length = 160
exclude = tests/*
max-complexity = 10
ignore = E129,E221,E241,E251,E303,W291


[tool:pytest]
addopts = --doctest-modules --doctest-glob='*.rst'  --strict
collect_ignore = setup.py
doctest_optionflags = ALLOW_UNICODE ALLOW_BYTES ELLIPSIS IGNORE_EXCEPTION_DETAIL NORMALIZE_WHITESPACE
norecursedirs =
  dist
  build
  .tox
testpaths = tests

